--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Setup
-title: Not Pure Poole
-description: A simple, beautiful, and powerful Jekyll theme for blogs
-url: https://vszhub.github.io
-avatar: /avatar.jpeg
+title: YoungJin
+description: 공부한 내용을 기록하기 위한 공간
+url: https://parkyoungjiin.github.io/
+avatar: /title.png
 paginate: 5
 permalink: pretty
 cover_image: /bg.jpeg
@@ -33,10 +33,10 @@ twitter:
   card: summary
 logo: logo.png
 social:
-  name: Songzi Vong
+  name: Youngjin Park
   links:
     - https://twitter.com/vszhub
-    - https://github.com/vszhub
+    - https://parkyoungjiin.github.io/
 google_site_verification: xxxxx
 lang: en
 
