카테고리 만들어보기 하는 중

--- a/_data/archive.yml
+++ b/_data/archive.yml
@@ -1,9 +1,12 @@
+- type: home
+  title: Home
+  url: //
+- type: categories
+  title: Categories
+  url: /categories/
 - type: dates
   title: Dates
   url: /dates/
-#- type: categories
-#  title: Categories
-#  url: /categories/
 - type: tags
   title: Tags
   url: /tags/
