--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,9 +1,6 @@
 - title: Email
-  url: mailto://vszhub@gmail.com
+  url: pyjs18593@gmail.com
   icon: fas fa-envelope
-- title: Twitter
-  url: https://twitter.com/vszhub
-  icon: fab fa-twitter
 - title: GitHub
-  url: https://github.com/vszhub/not-pure-poole
+  url: https://parkyoungjiin.github.io/
   icon: fab fa-github
