--- a/_data/archive.yml
+++ b/_data/archive.yml
@@ -1,6 +1,6 @@
 - type: home
   title: Home
-  url: //
+  url: https://parkyoungjiin.github.io/
 - type: categories
   title: Categories
   url: /categories/
