배경화면 변경

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https://parkyoungjiin.github.io/
 avatar: /title.png
 paginate: 5
 permalink: pretty
-cover_image: /testbg.jpeg
+cover_image: /testbg2.jpeg
 
 # Gems
 plugins:
