--- a/_config.yml
+++ b/_config.yml
@@ -65,3 +65,6 @@ markdown: kramdown
 kramdown:
   input: GFM
   syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    block:
+        line_numbers: true
